# InferIQ

inferiq/: .gitignore  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml
inferiq/configs/: default.yaml  models.yaml
inferiq/dashboard/: __init__.py  app.py
inferiq/dashboard/components/: comparison_table.py  gpu_monitor.py  latency_chart.py  throughput_chart.py
inferiq/k8s/: configmap.yaml  deployment-gateway.yaml  deployment-vllm.yaml  hpa-gateway.yaml  service-gateway.yaml
inferiq/scripts/: export_traces.py  run_benchmark.py
inferiq/src/: __init__.py
inferiq/src/backends/: __init__.py  base.py  nemo_backend.py  nim_backend.py  vllm_backend.py
inferiq/src/benchmark/: __init__.py  metrics.py  profiler.py  runner.py  workloads.py
inferiq/src/config/: __init__.py  settings.py
inferiq/src/gateway/: __init__.py  app.py  health.py  middleware.py  router.py  schemas.py
inferiq/src/utils/: __init__.py  gpu.py  logging.py
inferiq/tests/: __init__.py  conftest.py  test_backends.py  test_benchmark.py  test_gateway.py
