[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferiq"
version = "0.1.0"
description = "Production-grade GPU-optimized LLM serving benchmark and inference gateway"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "InferIQ Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Benchmark",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "httpx>=0.26.0",
    "torch>=2.1.0",
    "numpy>=1.26.0",
    "nvidia-ml-py>=13.5.0",
    "tiktoken>=0.5.2",
    "transformers>=4.36.0",
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "orjson>=3.9.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "mlflow>=2.9.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
vllm = ["vllm>=0.2.6"]
nemo = ["nemo-toolkit>=1.22.0", "nemo-deploy>=0.1.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
all = ["inferiq[vllm,nemo,dev]"]

[project.scripts]
inferiq-benchmark = "scripts.run_benchmark:main"
inferiq-gateway = "src.gateway.app:main"
inferiq-dashboard = "dashboard.app:main"

[project.urls]
Homepage = "https://github.com/inferiq/inferiq"
Documentation = "https://inferiq.readthedocs.io"
Repository = "https://github.com/inferiq/inferiq"
Issues = "https://github.com/inferiq/inferiq/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ASYNC", # flake8-async
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
]
ignore = ["E501"]  # line too long, handled by formatter

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.coverage.run]
source = ["src", "dashboard", "scripts"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == \"__main__\":",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
